[gd_scene load_steps=4 format=3 uid="uid://cyfp0mwm87gmv"]

[ext_resource type="Script" path="res://Components/spawner_component.gd" id="1_e5aem"]
[ext_resource type="Script" path="res://Scripts/enemy_wave_spawner.gd" id="1_v23rp"]
[ext_resource type="PackedScene" uid="uid://b0lbpufbkorrc" path="res://Scenes/enemy.tscn" id="2_v35b8"]

[node name="EnemyWaveSpawner" type="Node2D"]
script = ExtResource("1_v23rp")

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("1_e5aem")
scene = ExtResource("2_v35b8")

[node name="WaveStartDelayTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="WaveStartDelayTimer" to="." method="_on_wave_start_delay_timer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
